<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>

    <!-- Glyph Interface settings -->
    <string name="glyph_title">Glyph Interface</string>
    <string name="glyph_summary">Customise glyph lights</string>
    <string name="glyph_enable">Glyph lights</string>
    <string name="glyph_brightness_title">Brightness</string>
    <string name="glyph_charging_title">Charging</string>
    <string name="glyph_charging_meter_enable_title">Charging meter</string>
    <string name="glyph_charging_meter_summary">Display current battery level when charging</string>
    <string name="glyph_notification_title">Notification</string>
    <string name="glyph_notification_blink_enable_title">Notification blink</string>
    <string name="glyph_notification_blink_summary">Blink when receiving notification</string>

</resources>
